# discord-bot-py

./: .gitignore  .replit  keep_alive.py  main.py  pyproject.toml  replit.nix
.config/pip/: pip.conf
.devcontainer/: Dockerfile  devcointainer.json  devcontainer.json
