[tool.poetry]
name = "discord-bot"
version = "0.3.0"
description = ""
authors = [
    "George Zhuzha <zhorazhuzha@gmail.com>",
    "Roman Zhuzha <romazhuzha@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.10.0"
Flask = "^2.1.2"
boto3 = "^1.24.2"
botocore = "^1.27.2"
validators = "^0.20.0"
py-cord = {git = "https://github.com/Pycord-Development/pycord.git", rev = "master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"