[tool.poetry]
name = "discord-bot"
version = "0.3.0"
description = ""
authors = [
    "George Zhuzha <zhorazhuzha@gmail.com>",
    "Roman Zhuzha <romazhuzha@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
replit = "^3.2.4"
Flask = "^2.2.0"
# urllib3 = "^1.26.12"
boto3 = "^1.24.2"
botocore = "^1.27.2"
validators = "^0.20.0"
py-cord = "^2.2.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"